# LIBiFBTSVM

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  azure-pipelines.yml  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  tox.ini
examples/: benchmarks.py  example_5.py  example_border.py  example_iris.py  example_rbf.py  example_update_gisette.py  example_update_model.py
libifbtsvm/: __init__.py  libifbtsvm.py
libifbtsvm/functions/: __init__.py  approx_kernel.py  classify.py  ctrain_model.c  ctrain_model.pyx  fuzzy_membership.py  train_model.py
libifbtsvm/kernels/: __init__.py
libifbtsvm/models/: ifbtsvm.py
tests/: conftest.py  test_dummy.py  test_ifbtsvm.py
tests/functions/: conftest.py  test_approx_kernel.py  test_fuzzy_membership.py  test_train_model.py  test_update_model.py
utils/: benchmarks.py  benchmarks_incremental.py  grid_search_kernel.py
