[tool.poetry]
name = "libifbtsvm"
version = "2.1.0"
description = "This library contains the implementation of the increment and decremental fuzzy bounded twin support vector machine."
authors = ["None"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.3.2"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
